chore: apply formatting and enforce dependency rules (#329)